K8s_Manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: test
  labels:
    name: test
