K8s_Manifests/lb-svc-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  labels: 
    app: lb-example
spec:
  replicas: 5
  selector:
    matchLabels:
      app: lb-example
  template:
    metadata:
      labels:
        app: lb-example
    spec:
      containers:
      - image: gcr.io/google-samples/node-hello:1.0
        name: hello-world
        ports:
        - containerPort: 8080
