K8s_Manifests/pod-for-volume-mount-secrets.yaml
apiVersion: v1
kind: Pod
metadata:
  name: volume-mount-pod
spec:
  containers:
    - name: vm-pod
      image: nginx
      volumeMounts:
        - name: secret-volume
          mountPath: /etc/config/secrets
          readOnly: true
  volumes:
    - name: secret-volume
      secret:
        secretName: my-secret
