K8s_Manifests/pod-with-secret.yaml
apiVersion: v1
kind: Pod
metadata:
  name: env-pod
spec:
  containers:
  - name: web
    image: nginx
    # resources:
    #   limits:
    #     cpu: 300m
    #     memory: "96Mi"
    command: ['sh', '-c', 'echo "Username: $USER" "Password: $PASSWORD"']
