K8s_Manifests/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ststic-web
  # namespace: test
  labels:
    name: mypod
spec:
  containers:
    - name: web
      image: nginx
      resources:
        limits:
          cpu: "500m"
          memory: "128Mi"
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
