K8s_Manifests/service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: service-pod
  labels:
    app: my-test-pod
    type: frontend
spec:
  containers:
    - name: nginx-container  
      image: nginx
