K8s_Manifests/cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - targetPort: 80 
      port: 80
  selector:
    app: my-test-pod
    type: frontend
