K8s_Manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: testing
spec:
  type: ClusterIP
  selector:
    app: testing
  ports:
  - port: 80
    targetPort: 5000
